Driver Config changed for more Reliability